# Dat-Archive-old

./: .gitignore  CMakeLists.txt  DatArchive.h  DatArchiveWriter.h  Descriptor Spec.txt  File Spec.txt  ImageSpec.txt  README.md
DatArchive/: DatArchiveCommon.h
ZLib/: CMakeLists.txt
ZLib/win/: zlibstatic.lib  zlibstatic32.lib
